* Add Q-learning implementaion - part 2/4
next steps:
1. Add testing evaluation.
2. Add report generation

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /part1/results_alpha/
 /part1/results_goal_reward/
 /part1/results_step_reward/
+/part1/results_ep_decay/
+/part1/results_gamma/
+/algorithms/__pycache__/*.pyc
+/part1/__pycache__/*.pyc
